objects/ConversationParticipant_Home__dll.object
<CustomObject>
    <fields>
        <fullName>ConversationId__c</fullName>
        <label>Conversation ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <label>Created By ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Conversation Participant ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JoinedTimeMilliSecs__c</fullName>
        <label>Milliseconds portion of Joined Time</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JoinedTime__c</fullName>
        <label>Joined Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>KQ_Id__c</fullName>
        <label>KQ_Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastActiveTimeMilliSecs__c</fullName>
        <label>Milliseconds portion of Last Active Time</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <label>Last Modified By ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeftTime__c</fullName>
        <label>Left Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Conversation Participant Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParticipantContext__c</fullName>
        <label>Participant Context</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParticipantDisplayName__c</fullName>
        <label>Participant Display Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParticipantEntityId__c</fullName>
        <label>ParticipantEntity ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParticipantKey__c</fullName>
        <label>Participant Key</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParticipantRole__c</fullName>
        <label>Participant Role</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SfdcOrganizationId__c</fullName>
        <label>SfdcOrganizationId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <label>System Modstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Uuid__c</fullName>
        <label>Participant UUID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdp_sys_PartitionDate__c</fullName>
        <label>cdp_sys_PartitionDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cdp_sys_SourceVersion__c</fullName>
        <label>cdp_sys_SourceVersion</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>